<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".UpdateProfileFragment">

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editProfile"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailText"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp">
            </TextView>
        </LinearLayout>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_border"
            android:paddingLeft="10dp"
            android:padding="15dp"
            android:hint="Name" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_border"
            android:paddingLeft="10dp"
            android:padding="15dp"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/age"
            android:background="@drawable/input_border"
            android:paddingLeft="10dp"
            android:padding="15dp"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/editGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editLayout">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/update"
            android:textSize="20sp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:text="@string/back"
            android:backgroundTint="@color/blue"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>